# TiVault

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  SECURITY.md  UPDATES.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: core.rs  lib.rs  main.rs  security.rs  telegram.rs  web.rs
src/lib/: api.ts
