[package]
name = "tivault"
version = "0.1.1-alpha"
description = "Unlimited-size personal file vault backed by Telegram Saved Messages"
authors = ["H34TB145T"]
edition = "2021"
license = "MIT"

[lib]
name = "tivault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
tdlib-rs = { version = "1.4.0", features = ["download-tdlib", "static"] }

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.7", features = ["multipart"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
hex = "0.4.3"
fs2 = "0.4.3"
mime_guess = "2.0.5"
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.0"
thiserror = "2.0.17"
tdlib-rs = { version = "1.4.0", features = ["download-tdlib", "static"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "limit", "set-header"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
walkdir = "2.5.0"
zeroize = "1.8.2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3.23.0"
